<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/profile_Info_Tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/profile_info"
        android:textSize="22dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/profile_ProfileImage_Iv"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/ic_profile_teal_64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_Info_Tv" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_ProfileImage_Iv">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                app:layout_constraintBottom_toTopOf="@id/profile_Edit_Btn"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/profile_Name_Tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="48dp"
                    android:text="@string/profile_name"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/profile_WorkerName_Tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="48dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/profile_Name_Tv"
                    app:layout_constraintTop_toBottomOf="@id/profile_Name_Tv" />

                <TextView
                    android:id="@+id/profile_Surname_Tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/profile_surname"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="@id/profile_WorkerName_Tv"
                    app:layout_constraintTop_toBottomOf="@id/profile_WorkerName_Tv" />

                <TextView
                    android:id="@+id/profile_WorkerSurname_Tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/profile_WorkerName_Tv"
                    app:layout_constraintStart_toStartOf="@+id/profile_Surname_Tv"
                    app:layout_constraintTop_toBottomOf="@id/profile_Surname_Tv" />

                <TextView
                    android:id="@+id/profile_Hospital_Tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/profile_hospital"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="@id/profile_WorkerSurname_Tv"
                    app:layout_constraintTop_toBottomOf="@id/profile_WorkerSurname_Tv" />

                <TextView
                    android:id="@+id/profile_WorkerHospital_Tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/profile_WorkerSurname_Tv"
                    app:layout_constraintStart_toStartOf="@+id/profile_Hospital_Tv"
                    app:layout_constraintTop_toBottomOf="@id/profile_Hospital_Tv" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/profile_Edit_Btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:layout_marginBottom="24dp"
                android:text="@string/profile_edit"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/profile_SignOut_Btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="64dp"
                android:layout_marginBottom="24dp"
                android:text="@string/profile_signout"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>